<?xml version="1.0"?>
<package format="3">
  <name>alohamini_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and parameters for AlohaMini lidar/IMU SLAM and Nav2 bringup.</description>
  <maintainer email="todo@example.com">AlohaMini</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>alohamini_description</exec_depend>
  <exec_depend>alohamini_nav_bridge</exec_depend>
  <exec_depend>alohamini_base_control</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
