<?xml version="1.0"?>
<package format="3">
  <name>alohamini_description</name>
  <version>0.1.0</version>
  <description>AlohaMini robot description for lidar/IMU navigation bringup.</description>
  <maintainer email="todo@example.com">AlohaMini</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

