<?xml version="1.0"?>
<package format="3">
  <name>alohamini_nav_bridge</name>
  <version>0.1.0</version>
  <description>Bridge ROS2 cmd_vel/odom to the AlohaMini ZMQ host.</description>
  <maintainer email="todo@example.com">AlohaMini</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch</exec_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-zmq</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

